Add md titles to notebook and .gitignore generated plots

--- a/data_and_plot_hallitus.ipynb
+++ b/data_and_plot_hallitus.ipynb
@@ -1,15 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import Counter"
+    "# Import the necessary libraries"
    ]
   },
   {
@@ -19,13 +15,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('data\\\\hallitus.xlsx')"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2",
+   "metadata": {},
+   "source": [
+    "# Read the data from the excel file\n",
+    "Here you can specify the path to the excel file. The data is read into a pandas DataFrame."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('data\\\\hallitus.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "# Display the columns and the first few rows of the DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +60,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "# Count the number of responses for each option in the column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,9 +99,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "# Create a DataFrame from the results and display it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +119,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "# Plot the results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +144,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "# Plot the results as a horizontal bar plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +165,41 @@
     "plt.ylabel(\"Options\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "# Plot the results and save as file using Seaborn library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.style.use('seaborn-whitegrid')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, max(8, len(sorted_results) * 0.4)))\n",
+    "bars = ax.barh(list(sorted_results.keys()), list(sorted_results.values()))\n",
+    "\n",
+    "# Customize the chart\n",
+    "ax.set_title(\"Turkulaiseen teekkariuteen yhdistettävät arvot, hallitus\", fontsize=16)\n",
+    "ax.set_xlabel(\"Vastauksien määrä\", fontsize=12)\n",
+    "ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
+    "\n",
+    "for bar in bars:\n",
+    "    width = bar.get_width()\n",
+    "    ax.text(width, bar.get_y() + bar.get_height()/2, f'{width}', \n",
+    "            ha='left', va='center', fontsize=10, fontweight='bold')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('./plots/hallitus/turku_teekkari_values.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('./plots/hallitus/turku_teekkari_values.pdf', bbox_inches='tight')"
    ]
   }
  ],
