Revamp to use functions to better process data from multiple sources

--- a/data_and_plot_hallitus.ipynb
+++ b/data_and_plot_hallitus.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Import the necessary libraries"
+    "# Import the necessary libraries and define functions for mass processing"
    ]
   },
   {
@@ -18,7 +18,77 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import py7zr\n",
+    "\n",
+    "def process_survey_data(file_path, column_index):\n",
+    "    \"\"\"\n",
+    "    Process survey data from an Excel file.\n",
+    "    \n",
+    "    :param file_path: Path to the Excel file\n",
+    "    :param column_index: Index of the column containing the survey responses\n",
+    "    :return: A Counter object with processed responses\n",
+    "    \"\"\"\n",
+    "    df = pd.read_excel(file_path)\n",
+    "    responses = df.iloc[:, column_index].dropna()\n",
+    "    \n",
+    "    counter = Counter()\n",
+    "    for response in responses:\n",
+    "        if isinstance(response, str):\n",
+    "            choices = [choice.strip() for choice in response.split(';') if choice.strip()]\n",
+    "            counter.update(choices)\n",
+    "    \n",
+    "    return counter\n",
+    "\n",
+    "def combine_survey_results(*counters):\n",
+    "    \"\"\"\n",
+    "    Combine results from multiple surveys.\n",
+    "    \n",
+    "    :param counters: Counter objects from different surveys\n",
+    "    :return: A combined Counter object\n",
+    "    \"\"\"\n",
+    "    combined = Counter()\n",
+    "    for counter in counters:\n",
+    "        combined.update(counter)\n",
+    "    return combined\n",
+    "\n",
+    "def plot_survey_results(counter, title, output_file_base):\n",
+    "    \"\"\"\n",
+    "    Plot survey results as a horizontal bar chart using Seaborn.\n",
+    "    \n",
+    "    :param counter: Counter object with survey results\n",
+    "    :param title: Title for the chart\n",
+    "    :param output_file_base: File name for saving the chart\n",
+    "    \"\"\"\n",
+    "    sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
+    "    \n",
+    "    plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
+    "    sns.set_style(\"whitegrid\")\n",
+    "    ax = sns.barplot(x=list(sorted_result.values()), y=list(sorted_result.keys()), orient='h')\n",
+    "    \n",
+    "    ax.set_title(title, fontsize=16)\n",
+    "    ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
+    "    \n",
+    "    for i, v in enumerate(sorted_result.values()):\n",
+    "        ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
+    "    plt.savefig(f\"{output_file_base}.svg\", format='svg', bbox_inches='tight')\n",
+    "    plt.close()\n",
+    "    \n",
+    "    \n",
+    "def create_archive(file_path, archive_path):\n",
+    "    \"\"\"\n",
+    "    Create a 7z archive from a file.\n",
+    "    \n",
+    "    :param file_path: Path to the file to be archived\n",
+    "    :param archive_path: Path to the archive file\n",
+    "    \"\"\"\n",
+    "    with py7zr.SevenZipFile(archive_path, 'w') as archive:\n",
+    "        archive.writeall(file_path)\n"
    ]
   },
   {
@@ -26,8 +96,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "# Read the data from the excel file\n",
-    "Here you can specify the path to the excel file. The data is read into a pandas DataFrame."
+    "# Process the data from the surveys"
    ]
   },
   {
@@ -37,7 +106,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('data\\\\hallitus.xlsx')"
+    "survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
+    "survey2 = process_survey_data(\"data/killat.xlsx\", 7)\n",
+    "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
    ]
   },
   {
@@ -45,7 +116,7 @@
    "id": "4",
    "metadata": {},
    "source": [
-    "# Display the columns and the first few rows of the DataFrame"
+    "# Plot individual survey results"
    ]
   },
   {
@@ -55,8 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df.columns)\n",
-    "df.head()\n"
+    "plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")\n",
+    "plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
+    "plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
    ]
   },
   {
@@ -64,7 +136,7 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "# Count the number of responses for each option in the column"
+    "# Combine the results from all surveys and plot the combined results"
    ]
   },
   {
@@ -74,28 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_name = df.columns[7]\n",
-    "responses = df[column_name].dropna()\n",
-    "\n",
-    "def count_responses(responses):\n",
-    "    counter = Counter()\n",
-    "    for response in responses:\n",
-    "            if isinstance(response, str):  # Ensure response is a string to prevent whitespace answers\n",
-    "                choices = [choice.strip() for choice in response.split(';') if choice.strip()]\n",
-    "                counter.update(choices)\n",
-    "    return counter\n",
-    "\n",
-    "result = count_responses(responses)\n",
-    "\n",
-    "if not isinstance(result, dict):\n",
-    "    result = dict(result)\n",
-    "    \n",
-    "    \n",
-    "sorted_results = dict(sorted(result.items(), key=lambda x: x[1], reverse=True))\n",
-    "sorted_results.pop('', None)\n",
-    "\n",
-    "for option, count in sorted_results.items():\n",
-    "    print(f\"'{option}': {count}\")\n"
+    "combined_results = combine_survey_results(survey1, survey2, survey3)\n",
+    "plot_survey_results(combined_results, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Yhdistetyt tulokset\", \"./plots/yhdistetyt/arvot\")"
    ]
   },
   {
@@ -103,7 +155,7 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "# Create a DataFrame from the results and display it"
+    "# Create an archive of the plots"
    ]
   },
   {
@@ -113,93 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df = pd.DataFrame.from_dict(sorted_results, orient='index', columns=['Count'])\n",
-    "result_df.index.name = 'Option'\n",
-    "result_df\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10",
-   "metadata": {},
-   "source": [
-    "# Plot the results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 8))\n",
-    "plt.bar(sorted_results.keys(), sorted_results.values())\n",
-    "plt.title(\"TK:n hallituksen vastaukset turkulaisen teekkariuden arvoista\")\n",
-    "plt.xlabel(\"Vaihtoehdot\")\n",
-    "plt.ylabel(\"Vastausten määrä\")\n",
-    "plt.xticks(rotation=45, ha='right')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
-   "source": [
-    "# Plot the results as a horizontal bar plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 8))\n",
-    "plt.barh(list(sorted_results.keys()), list(sorted_results.values()))\n",
-    "plt.title(\"Responses to Turku Teekkari Values Question\")\n",
-    "plt.xlabel(\"Number of Responses\")\n",
-    "plt.ylabel(\"Options\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14",
-   "metadata": {},
-   "source": [
-    "# Plot the results and save as file using Seaborn library"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use('seaborn-whitegrid')\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(10, max(8, len(sorted_results) * 0.4)))\n",
-    "bars = ax.barh(list(sorted_results.keys()), list(sorted_results.values()))\n",
-    "\n",
-    "# Customize the chart\n",
-    "ax.set_title(\"Turkulaiseen teekkariuteen yhdistettävät arvot, hallitus\", fontsize=16)\n",
-    "ax.set_xlabel(\"Vastauksien määrä\", fontsize=12)\n",
-    "ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
-    "\n",
-    "for bar in bars:\n",
-    "    width = bar.get_width()\n",
-    "    ax.text(width, bar.get_y() + bar.get_height()/2, f'{width}', \n",
-    "            ha='left', va='center', fontsize=10, fontweight='bold')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig('./plots/hallitus/turku_teekkari_values.png', dpi=300, bbox_inches='tight')\n",
-    "plt.savefig('./plots/hallitus/turku_teekkari_values.pdf', bbox_inches='tight')"
+    "create_archive(\"plots\", \"./target/plots.7z\")"
    ]
   }
  ],
