Make the colour palette more appropriate and remove legend

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.ticker as ticker\n",
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "import py7zr\n",
@@ -61,10 +62,16 @@
     "    :param output_file_base: File name for saving the chart\n",
     "    \"\"\"\n",
     "    sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
+    "    values = list(sorted_result.values())\n",
+    "    keys = list(sorted_result.keys())\n",
+    "\n",
     "    \n",
     "    plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
-    "    sns.set_style(\"whitegrid\")\n",
-    "    ax = sns.barplot(x=list(sorted_result.values()), y=list(sorted_result.keys()), orient='h')\n",
+    "    sns.set_style(\"ticks\")\n",
+    "    sns.despine()\n",
+    "    sns.color_palette()\n",
+    "    ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
+    "    ax.legend_.remove()\n",
     "    \n",
     "    ax.set_title(title, fontsize=16)\n",
     "    ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
@@ -72,6 +79,8 @@
     "    \n",
     "    for i, v in enumerate(sorted_result.values()):\n",
     "        ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
+    "    \n",
+    "    ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
