Implement get_data_files

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -16,11 +16,21 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "import py7zr\n",
+    "\n",
+    "def get_data_files(directory=\"./data/\"):\n",
+    "    \"\"\"\n",
+    "    Get a list of Excel files in a directory.\n",
+    "    \n",
+    "    :param directory: Path to the directory\n",
+    "    :return: List of Excel files\n",
+    "    \"\"\"\n",
+    "    return [os.path.join(directory, file) for file in os.listdir(directory) if file.endswith(\".xlsx\")]\n",
     "\n",
     "def process_survey_data(file_path, column_index):\n",
     "    \"\"\"\n",
