Implement process_survey_data_to_df, comment out not-optimal solution

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -15,46 +15,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import os\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "import py7zr\n",
     "\n",
-    "def get_data_files(directory=\"./data/\"):\n",
-    "    \"\"\"\n",
-    "    Get a list of Excel files in a directory.\n",
-    "    \n",
-    "    :param directory: Path to the directory\n",
-    "    :return: List of Excel files\n",
-    "    \"\"\"\n",
-    "    return [os.path.join(directory, file) for file in os.listdir(directory) if file.endswith(\".xlsx\")]\n",
+    "# def get_data_files(directory):\n",
+    "#     \"\"\"\n",
+    "#     Get a list of Excel files in a directory.\n",
+    "#     \n",
+    "#     :param directory: Path to the directory\n",
+    "#     :return: List of Excel files\n",
+    "#     \"\"\"\n",
+    "#     return [os.path.join(directory, file) for file in os.listdir(directory) if file.endswith(\".xlsx\")]\n",
+    "# \n",
+    "# \n",
+    "# def process_survey_data_to_df(directory=\"./data/\", column_index=7):\n",
+    "#     \"\"\"\n",
+    "#     Process survey data from multiple Excel files.\n",
+    "#     \n",
+    "#     :param directory: Path to the directory containing the Excel files\n",
+    "#     :param column_index: Index of the column containing the survey responses\n",
+    "#     :return: A DataFrame with processed responses\n",
+    "#     \"\"\"\n",
+    "#     excel_files = get_data_files(directory)\n",
+    "#     all_counters = []\n",
+    "#     \n",
+    "#     for file in excel_files:\n",
+    "#         df = pd.read_excel(file)\n",
+    "#         responses = df.iloc[:, column_index].dropna()\n",
+    "#         \n",
+    "#         counter = Counter()\n",
+    "#         for response in responses:\n",
+    "#             if isinstance(response, str):\n",
+    "#                 choices = [choice.strip() for choice in response.split(';') if choice.strip()]\n",
+    "#                 counter.update(choices)\n",
+    "#                 \n",
+    "#         all_counters.append(counter)\n",
+    "#         \n",
+    "#     combined_counter = sum(all_counters, Counter())\n",
+    "#     \n",
+    "#     \n",
+    "#     df = pd.DataFrame.from_dict(combined_counter, orient='index', columns=['Total'])\n",
+    "#     df = df.sort_values(by='Total', ascending=False)\n",
+    "#     \n",
+    "#     \n",
+    "#     for i, counter in enumerate(all_counters):\n",
+    "#         df[f'Survey_{i+1}'] = df.index.map(counter)\n",
+    "#         \n",
+    "#     return df\n",
     "\n",
     "def process_survey_data(file_path, column_index):\n",
     "    \"\"\"\n",
     "    Process survey data from an Excel file.\n",
-    "    \n",
+    "\n",
     "    :param file_path: Path to the Excel file\n",
     "    :param column_index: Index of the column containing the survey responses\n",
     "    :return: A Counter object with processed responses\n",
     "    \"\"\"\n",
     "    df = pd.read_excel(file_path)\n",
     "    responses = df.iloc[:, column_index].dropna()\n",
-    "    \n",
+    "\n",
     "    counter = Counter()\n",
     "    for response in responses:\n",
     "        if isinstance(response, str):\n",
     "            choices = [choice.strip() for choice in response.split(';') if choice.strip()]\n",
     "            counter.update(choices)\n",
-    "    \n",
+    "\n",
     "    return counter\n",
     "\n",
     "def combine_survey_results(*counters):\n",
     "    \"\"\"\n",
     "    Combine results from multiple surveys.\n",
-    "    \n",
+    "\n",
     "    :param counters: Counter objects from different surveys\n",
     "    :return: A combined Counter object\n",
     "    \"\"\"\n",
@@ -66,7 +102,7 @@
     "def plot_survey_results(counter, title, output_file_base):\n",
     "    \"\"\"\n",
     "    Plot survey results as a horizontal bar chart using Seaborn.\n",
-    "    \n",
+    "\n",
     "    :param counter: Counter object with survey results\n",
     "    :param title: Title for the chart\n",
     "    :param output_file_base: File name for saving the chart\n",
@@ -75,23 +111,23 @@
     "    values = list(sorted_result.values())\n",
     "    keys = list(sorted_result.keys())\n",
     "\n",
-    "    \n",
+    "\n",
     "    plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
     "    sns.set_style(\"ticks\")\n",
     "    sns.despine()\n",
     "    sns.color_palette()\n",
     "    ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
     "    ax.legend_.remove()\n",
-    "    \n",
+    "\n",
     "    ax.set_title(title, fontsize=16)\n",
     "    ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
     "    ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
-    "    \n",
+    "\n",
     "    for i, v in enumerate(sorted_result.values()):\n",
     "        ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
-    "    \n",
+    "\n",
     "    ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
-    "    \n",
+    "\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
     "    plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
@@ -125,6 +161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# survey_df = process_survey_data_to_df()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
     "survey2 = process_survey_data(\"data/killat.xlsx\", 7)\n",
     "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
