Comment unnecessary library import

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "# import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
@@ -110,7 +110,6 @@
     "    sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
     "    values = list(sorted_result.values())\n",
     "    keys = list(sorted_result.keys())\n",
-    "\n",
     "\n",
     "    plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
     "    sns.set_style(\"ticks\")\n",
