--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -1,19 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "0",
-   "metadata": {},
-   "source": [
-    "# Import the necessary libraries and define functions for mass processing"
-   ]
-  },
-  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-19T13:55:37.029609Z",
+     "start_time": "2024-08-19T13:55:37.018102Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
    "outputs": [],
+   "execution_count": 17,
    "source": [
     "# import os\n",
     "import pandas as pd\n",
@@ -99,6 +95,36 @@
     "        combined.update(counter)\n",
     "    return combined\n",
     "\n",
+    "def plot_survey_results_multilingual(counter, title, output_file_base, translations):\n",
+    "    languages = list(translations[title].keys())\n",
+    "    \n",
+    "    for lang in languages:\n",
+    "        sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
+    "        values = list(sorted_result.values())\n",
+    "        keys = [translations.get(k, {}).get(lang, k) for k in sorted_result.keys()]\n",
+    "\n",
+    "        plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
+    "        sns.set_style(\"ticks\")\n",
+    "        sns.despine()\n",
+    "        sns.color_palette()\n",
+    "        ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
+    "        ax.legend_.remove()\n",
+    "    \n",
+    "        ax.set_title(title, fontsize=16)\n",
+    "        ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
+    "        ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
+    "    \n",
+    "        for i, v in enumerate(sorted_result.values()):\n",
+    "            ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
+    "    \n",
+    "        ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
+    "    \n",
+    "        plt.tight_layout()\n",
+    "        plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
+    "        plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
+    "        plt.savefig(f\"{output_file_base}.svg\", format='svg', bbox_inches='tight')\n",
+    "        plt.close()\n",
+    "\n",
     "def plot_survey_results(counter, title, output_file_base):\n",
     "    \"\"\"\n",
     "    Plot survey results as a horizontal bar chart using Seaborn.\n",
@@ -143,22 +169,30 @@
     "    \"\"\"\n",
     "    with py7zr.SevenZipFile(archive_path, 'w') as archive:\n",
     "        archive.writeall(file_path)\n"
-   ]
+   ],
+   "id": "1"
   },
   {
-   "cell_type": "markdown",
-   "id": "2",
    "metadata": {},
-   "source": [
-    "# Process the data from the surveys"
-   ]
+   "cell_type": "markdown",
+   "source": "# Import the necessary libraries and define functions for mass processing",
+   "id": "0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Process the data from the surveys",
+   "id": "2"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-19T13:55:37.076615Z",
+     "start_time": "2024-08-19T13:55:37.043633Z"
+    }
+   },
    "source": [
     "# survey_df = process_survey_data_to_df()\n",
     "\n",
@@ -168,7 +202,9 @@
     "survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
     "survey2 = process_survey_data(\"data/killat.xlsx\", 7)\n",
     "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -180,15 +216,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-19T13:55:39.913056Z",
+     "start_time": "2024-08-19T13:55:37.085588Z"
+    }
+   },
    "source": [
     "plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")\n",
     "plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
     "plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -200,14 +241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-19T13:55:40.997726Z",
+     "start_time": "2024-08-19T13:55:39.920260Z"
+    }
+   },
    "source": [
     "combined_results = combine_survey_results(survey1, survey2, survey3)\n",
     "plot_survey_results(combined_results, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Yhdistetyt tulokset\", \"./plots/yhdistetyt/arvot\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -219,13 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-19T13:55:41.425695Z",
+     "start_time": "2024-08-19T13:55:41.008757Z"
+    }
+   },
    "source": [
     "create_archive(\"plots\", \"./target/plots.7z\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 21
   }
  ],
  "metadata": {
