--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -1,15 +1,19 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Import the necessary libraries and define functions for mass processing",
+   "id": "51851385027fb610"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T13:55:37.029609Z",
-     "start_time": "2024-08-19T13:55:37.018102Z"
+     "end_time": "2024-08-20T21:38:57.330831Z",
+     "start_time": "2024-08-20T21:38:57.317523Z"
     }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 17,
    "source": [
     "# import os\n",
     "import pandas as pd\n",
@@ -18,6 +22,8 @@
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "import py7zr\n",
+    "\n",
+    "\n",
     "\n",
     "# def get_data_files(directory):\n",
     "#     \"\"\"\n",
@@ -110,9 +116,9 @@
     "        ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
     "        ax.legend_.remove()\n",
     "    \n",
-    "        ax.set_title(title, fontsize=16)\n",
-    "        ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
-    "        ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
+    "        ax.set_title(translations[title][lang], fontsize=16)\n",
+    "        ax.set_xlabel(translations[\"Vastausten määrä\"][lang], fontsize=12)\n",
+    "        ax.set_ylabel(translations[\"Vaihtoehdot\"][lang], fontsize=12)\n",
     "    \n",
     "        for i, v in enumerate(sorted_result.values()):\n",
     "            ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
@@ -120,9 +126,9 @@
     "        ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
     "    \n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
-    "        plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
-    "        plt.savefig(f\"{output_file_base}.svg\", format='svg', bbox_inches='tight')\n",
+    "        plt.savefig(f\"{output_file_base}_{lang}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
+    "        plt.savefig(f\"{output_file_base}_{lang}.png\", format='png', dpi=300, bbox_inches='tight')\n",
+    "        plt.savefig(f\"{output_file_base}_{lang}.svg\", format='svg', bbox_inches='tight')\n",
     "        plt.close()\n",
     "\n",
     "def plot_survey_results(counter, title, output_file_base):\n",
@@ -170,27 +176,46 @@
     "    with py7zr.SevenZipFile(archive_path, 'w') as archive:\n",
     "        archive.writeall(file_path)\n"
    ],
-   "id": "1"
+   "id": "1",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Import the necessary libraries and define functions for mass processing",
-   "id": "0"
+   "source": "# Define translations location from data folder",
+   "id": "c59abec95f36e373"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-20T21:38:57.367539Z",
+     "start_time": "2024-08-20T21:38:57.360853Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from translation_utils import load_translations\n",
+    "\n",
+    "translations = load_translations(\"data/translations.json\")"
+   ],
+   "id": "5c207978672015e2",
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "# Process the data from the surveys",
-   "id": "2"
+   "id": "e7fbeeb26f21a442"
   },
   {
    "cell_type": "code",
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T13:55:37.076615Z",
-     "start_time": "2024-08-19T13:55:37.043633Z"
+     "end_time": "2024-08-20T21:38:57.505547Z",
+     "start_time": "2024-08-20T21:38:57.379593Z"
     }
    },
    "source": [
@@ -204,7 +229,7 @@
     "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -219,17 +244,21 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T13:55:39.913056Z",
-     "start_time": "2024-08-19T13:55:37.085588Z"
+     "end_time": "2024-08-20T21:39:02.832204Z",
+     "start_time": "2024-08-20T21:38:57.519423Z"
     }
    },
    "source": [
-    "plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")\n",
-    "plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
-    "plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
+    "# plot_survey_results(survey1, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - TK:n hallitus\", \"./plots/hallitus/arvot\")\n",
+    "# plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
+    "# plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")\n",
+    "\n",
+    "plot_survey_results_multilingual(survey1, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - TK:n hallitus\", \"./plots/hallitus/arvot\", translations)\n",
+    "plot_survey_results_multilingual(survey2, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen hallitukset\", \"./plots/hallitus/arvot\", translations)\n",
+    "plot_survey_results_multilingual(survey3, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen jäsenet\", \"./plots/hallitus/arvot\", translations)"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -244,16 +273,18 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T13:55:40.997726Z",
-     "start_time": "2024-08-19T13:55:39.920260Z"
+     "end_time": "2024-08-20T21:39:51.708763Z",
+     "start_time": "2024-08-20T21:39:46.920380Z"
     }
    },
    "source": [
     "combined_results = combine_survey_results(survey1, survey2, survey3)\n",
-    "plot_survey_results(combined_results, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Yhdistetyt tulokset\", \"./plots/yhdistetyt/arvot\")"
+    "# plot_survey_results(combined_results, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Yhdistetyt tulokset\", \"./plots/yhdistetyt/arvot\")\n",
+    "\n",
+    "plot_survey_results_multilingual(combined_results, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Yhdistetyt vastaukset\", \"./plots/yhdistetyt/arvot\", translations)"
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -268,15 +299,15 @@
    "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T13:55:41.425695Z",
-     "start_time": "2024-08-19T13:55:41.008757Z"
+     "end_time": "2024-08-20T21:39:04.402067Z",
+     "start_time": "2024-08-20T21:39:03.953046Z"
     }
    },
    "source": [
     "create_archive(\"plots\", \"./target/plots.7z\")"
    ],
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 12
   }
  ],
  "metadata": {
