Fix target errors in multilingual plotting function usage

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:38:57.330831Z",
-     "start_time": "2024-08-20T21:38:57.317523Z"
+     "end_time": "2024-08-20T21:47:35.599727Z",
+     "start_time": "2024-08-20T21:47:35.585980Z"
     }
    },
    "cell_type": "code",
@@ -178,7 +178,7 @@
    ],
    "id": "1",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -189,8 +189,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:38:57.367539Z",
-     "start_time": "2024-08-20T21:38:57.360853Z"
+     "end_time": "2024-08-20T21:47:35.621017Z",
+     "start_time": "2024-08-20T21:47:35.614561Z"
     }
    },
    "cell_type": "code",
@@ -201,7 +201,7 @@
    ],
    "id": "5c207978672015e2",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -214,8 +214,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:38:57.505547Z",
-     "start_time": "2024-08-20T21:38:57.379593Z"
+     "end_time": "2024-08-20T21:47:35.665260Z",
+     "start_time": "2024-08-20T21:47:35.632250Z"
     }
    },
    "source": [
@@ -229,7 +229,7 @@
     "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
    ],
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -244,8 +244,8 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:39:02.832204Z",
-     "start_time": "2024-08-20T21:38:57.519423Z"
+     "end_time": "2024-08-20T21:47:45.130687Z",
+     "start_time": "2024-08-20T21:47:35.674581Z"
     }
    },
    "source": [
@@ -254,11 +254,11 @@
     "# plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")\n",
     "\n",
     "plot_survey_results_multilingual(survey1, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - TK:n hallitus\", \"./plots/hallitus/arvot\", translations)\n",
-    "plot_survey_results_multilingual(survey2, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen hallitukset\", \"./plots/hallitus/arvot\", translations)\n",
-    "plot_survey_results_multilingual(survey3, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen jäsenet\", \"./plots/hallitus/arvot\", translations)"
+    "plot_survey_results_multilingual(survey2, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen hallitukset\", \"./plots/killat/arvot\", translations)\n",
+    "plot_survey_results_multilingual(survey3, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen jäsenet\", \"./plots/jasenet/arvot\", translations)"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -273,8 +273,8 @@
    "id": "7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:39:51.708763Z",
-     "start_time": "2024-08-20T21:39:46.920380Z"
+     "end_time": "2024-08-20T21:47:48.429700Z",
+     "start_time": "2024-08-20T21:47:45.139323Z"
     }
    },
    "source": [
@@ -284,7 +284,7 @@
     "plot_survey_results_multilingual(combined_results, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Yhdistetyt vastaukset\", \"./plots/yhdistetyt/arvot\", translations)"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -299,15 +299,15 @@
    "id": "9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T21:39:04.402067Z",
-     "start_time": "2024-08-20T21:39:03.953046Z"
+     "end_time": "2024-08-20T21:47:49.243540Z",
+     "start_time": "2024-08-20T21:47:48.437844Z"
     }
    },
    "source": [
     "create_archive(\"plots\", \"./target/plots.7z\")"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 19
   }
  ],
  "metadata": {
