Fix the new implementations to work with translations

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -131,39 +131,39 @@
     "        plt.savefig(f\"{output_file_base}_{lang}.svg\", format='svg', bbox_inches='tight')\n",
     "        plt.close()\n",
     "\n",
-    "def plot_survey_results(counter, title, output_file_base):\n",
-    "    \"\"\"\n",
-    "    Plot survey results as a horizontal bar chart using Seaborn.\n",
-    "\n",
-    "    :param counter: Counter object with survey results\n",
-    "    :param title: Title for the chart\n",
-    "    :param output_file_base: File name for saving the chart\n",
-    "    \"\"\"\n",
-    "    sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
-    "    values = list(sorted_result.values())\n",
-    "    keys = list(sorted_result.keys())\n",
-    "\n",
-    "    plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
-    "    sns.set_style(\"ticks\")\n",
-    "    sns.despine()\n",
-    "    sns.color_palette()\n",
-    "    ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
-    "    ax.legend_.remove()\n",
-    "\n",
-    "    ax.set_title(title, fontsize=16)\n",
-    "    ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
-    "    ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
-    "\n",
-    "    for i, v in enumerate(sorted_result.values()):\n",
-    "        ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
-    "\n",
-    "    ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
-    "    plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
-    "    plt.savefig(f\"{output_file_base}.svg\", format='svg', bbox_inches='tight')\n",
-    "    plt.close()\n",
+    "# def plot_survey_results(counter, title, output_file_base):\n",
+    "#     \"\"\"\n",
+    "#     Plot survey results as a horizontal bar chart using Seaborn.\n",
+    "# \n",
+    "#     :param counter: Counter object with survey results\n",
+    "#     :param title: Title for the chart\n",
+    "#     :param output_file_base: File name for saving the chart\n",
+    "#     \"\"\"\n",
+    "#     sorted_result = dict(sorted(counter.items(), key=lambda x: x[1], reverse=True))\n",
+    "#     values = list(sorted_result.values())\n",
+    "#     keys = list(sorted_result.keys())\n",
+    "# \n",
+    "#     plt.figure(figsize=(12, max(8, len(sorted_result) * 0.4)))\n",
+    "#     sns.set_style(\"ticks\")\n",
+    "#     sns.despine()\n",
+    "#     sns.color_palette()\n",
+    "#     ax = sns.barplot(x=values, y=keys, orient='h', palette=\"deep\", hue=values)\n",
+    "#     ax.legend_.remove()\n",
+    "# \n",
+    "#     ax.set_title(title, fontsize=16)\n",
+    "#     ax.set_xlabel(\"Vastausten määrä\", fontsize=12)\n",
+    "#     ax.set_ylabel(\"Vaihtoehdot\", fontsize=12)\n",
+    "# \n",
+    "#     for i, v in enumerate(sorted_result.values()):\n",
+    "#         ax.text(v, i, f' {v}', va='center', fontsize=10)\n",
+    "# \n",
+    "#     ax.xaxis.set_major_locator(ticker.MaxNLocator(integer=True))\n",
+    "# \n",
+    "#     plt.tight_layout()\n",
+    "#     plt.savefig(f\"{output_file_base}.pdf\", format='pdf', dpi=300, bbox_inches='tight')\n",
+    "#     plt.savefig(f\"{output_file_base}.png\", format='png', dpi=300, bbox_inches='tight')\n",
+    "#     plt.savefig(f\"{output_file_base}.svg\", format='svg', bbox_inches='tight')\n",
+    "#     plt.close()\n",
     "    \n",
     "    \n",
     "def create_archive(file_path, archive_path):\n",
@@ -263,13 +263,13 @@
    "outputs": [],
    "source": [
     "if 'survey1' in locals():\n",
-    "    plot_survey_results_multilingual(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")    \n",
+    "    plot_survey_results_multilingual(survey1, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - TK:n hallitus\", \"./plots/hallitus/arvot\", translations)    \n",
     "\n",
     "if 'survey2' in locals():\n",
-    "    plot_survey_results_multilingual(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
+    "    plot_survey_results_multilingual(survey2, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen hallitukset\", \"./plots/killat/arvot\", translations)\n",
     "    \n",
     "if 'survey3' in locals():\n",
-    "    plot_survey_results_multilingual(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
+    "    plot_survey_results_multilingual(survey3, \"Mitkä arvoista yhdistät turkulaiseen teekkariuteen? - Kiltojen jäsenet\", \"./plots/jasenet/arvot\", translations)"
    ]
   },
   {
