--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
+    "import os\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
@@ -150,7 +150,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "# Process the data from the surveys"
+    "# Ensure needed directories exist"
    ]
   },
   {
@@ -160,9 +160,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.makedirs(\"plots/hallitus\", exist_ok=True)\n",
+    "os.makedirs(\"plots/killat\", exist_ok=True)\n",
+    "os.makedirs(\"plots/jasenet\", exist_ok=True)\n",
+    "os.makedirs(\"plots/yhdistetyt\", exist_ok=True)\n",
+    "os.makedirs(\"target\", exist_ok=True)\n",
+    "os.makedirs(\"data\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "# Process the data from the surveys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# survey_df = process_survey_data_to_df()\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
@@ -172,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "6",
    "metadata": {},
    "source": [
     "# Plot individual survey results"
@@ -181,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Combine the results from all surveys and plot the combined results"
@@ -201,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "source": [
     "# Create an archive of the plots"
@@ -220,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
