Implement logic to skip a data survey from being processed if it doesn't exist

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -185,10 +185,14 @@
    "source": [
     "# survey_df = process_survey_data_to_df()\n",
     "\n",
-    "\n",
-    "survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
-    "survey2 = process_survey_data(\"data/killat.xlsx\", 7)\n",
-    "survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)"
+    "if os.path.exists(\"data/hallitus.xlsx\"):\n",
+    "    survey1 = process_survey_data(\"data/hallitus.xlsx\", 7)\n",
+    "    \n",
+    "if os.path.exists(\"data/killat.xlsx\"):\n",
+    "    survey2 = process_survey_data(\"data/killat.xlsx\", 7)\n",
+    "    \n",
+    "if os.path.exists(\"data/kiltojen_jäsenet.xlsx\"):\n",
+    "    survey3 = process_survey_data(\"data/kiltojen_jäsenet.xlsx\", 7)\n"
    ]
   },
   {
