Implement logic to plot the surveys only if the variable for them exists in locals().

--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -210,9 +210,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")\n",
-    "plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
-    "plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
+    "if 'survey1' in locals():\n",
+    "    plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")    \n",
+    "\n",
+    "if 'survey2' in locals():\n",
+    "    plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
+    "    \n",
+    "if 'survey3' in locals():\n",
+    "    plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
    ]
   },
   {
