--- a/create_bar_charts_from_data.ipynb
+++ b/create_bar_charts_from_data.ipynb
@@ -1,19 +1,19 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Import the necessary libraries and define functions for mass processing",
-   "id": "51851385027fb610"
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Import the necessary libraries and define functions for mass processing"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T11:48:45.512263Z",
-     "start_time": "2024-08-29T11:48:45.312618Z"
-    }
-   },
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -175,45 +175,40 @@
     "    \"\"\"\n",
     "    with py7zr.SevenZipFile(archive_path, 'w') as archive:\n",
     "        archive.writeall(file_path)\n"
-   ],
-   "id": "1",
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Define translations location from data folder",
-   "id": "c59abec95f36e373"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-29T11:48:45.643428Z",
-     "start_time": "2024-08-29T11:48:45.634821Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from translation_utils import load_translations\n",
-    "\n",
-    "translations = load_translations(\"data/translations.json\")"
-   ],
-   "id": "5c207978672015e2",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
+   "id": "2",
    "metadata": {},
    "source": [
-    "# Ensure needed directories exist"
-   ],
-   "id": "cc7c30747220767b"
+    "# Define translations location from data folder"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from translation_utils import load_translations\n",
+    "\n",
+    "translations = load_translations(\"data/translations.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "# Ensure needed directories exist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "6",
    "metadata": {},
    "source": [
     "# Process the data from the surveys"
@@ -236,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "source": [
     "# Plot individual survey results"
@@ -263,23 +258,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "if 'survey1' in locals():\n",
-    "    plot_survey_results(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")    \n",
+    "    plot_survey_results_multilingual(survey1, \"Turkulaiseen teekkariuteen yhdistetyt arvot - TK:n hallitus\", \"./plots/hallitus/arvot\")    \n",
     "\n",
     "if 'survey2' in locals():\n",
-    "    plot_survey_results(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
+    "    plot_survey_results_multilingual(survey2, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Killat\", \"./plots/killat/arvot\")\n",
     "    \n",
     "if 'survey3' in locals():\n",
-    "    plot_survey_results(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
+    "    plot_survey_results_multilingual(survey3, \"Turkulaiseen teekkariuteen yhdistetyt arvot - Kiltojen jäsenet\", \"./plots/jasenet/arvot\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "source": [
     "# Combine the results from all surveys and plot the combined results"
@@ -287,8 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "9",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "source": [
     "# Create an archive of the plots"
@@ -308,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "11",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
